@@ -1,5 +1,16 @@
 2021-07-28 Philipp Klaus Krause <pkk AT spth.de>
 
+	* device/lib/r3ka/abs.s,
+	  device/lib/r3ka/atomic_flag_test_and_set.s,
+	  device/lib/r3ka/divsigned.s,
+	  device/lib/r3ka/divunsigned.s,
+	  device/lib/r3ka/modsigned.s,
+	  device/lib/r3ka/modunsigned.s,
+	  device/lib/r3ka/mulchar.s:
+	  Fix library functions for new calling convention.
+
+2021-07-28 Philipp Klaus Krause <pkk AT spth.de>
+
 	* support/regression/ports/rrz80/spec.mk,
 	  support/regression/ports/ucz180/spec.mk,
 	  support/regression/ports/ucz80-nmos/spec.mk,
